--- a/Components/Pages/Question.razor
+++ b/Components/Pages/Question.razor
@@ -18,7 +18,7 @@ else
                 
                 @foreach(string answer in answers)
                 {
-                    <button class="btn btn-outline-primary" type="button">@answer</button>
+                    <button class="btn btn-outline-dark" data-bs-toggle="button" type="button">@answer</button>
                 }
             }
         </div>
@@ -64,6 +64,7 @@ else
         }
         
     }
+    
 
    
 }   
