--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using TeachingSite.Frontend.Components
 @using TeachingSite.Frontend.Models
 @using TeachingSite.Frontend.Clients
+@using BlazorBootstrap;
