--- a/Components/DeleteQuestion.razor
+++ b/Components/DeleteQuestion.razor
@@ -1,37 +1,32 @@
-﻿<div class="modal fade" id="@GetModalId(question)" tabindex="-1" aria-labelledby="@GetTitleId(question)" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="@GetTitleId(question)">@title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Delete</button>
-      </div>
-    </div>
-  </div>
-</div>
+﻿@inject QuestionsClient QuestionsClient
+@inject NavigationManager NavigationManager
+<Button Color="ButtonColor.Secondary" @onclick="OnHideModalClick">Cancel</Button>
+<Button Color="ButtonColor.Primary" @onclick="Delete">Delete</Button>
+    
+                                 
+                     
 
-@code{
-    [Parameter]
-    public QuestionSummary? question {get; set;}
+
+
+@code {
+    
     private string title = string.Empty;
-
-    protected override void OnParametersSet()
+    [Parameter] public QuestionSummary? question {get; set;}
+    [Parameter] public Modal? modal {get; set;}
+    private void Delete()
     {
-        title = $"Delete {question?.Name}?";
+      ArgumentNullException.ThrowIfNull(question);
+      QuestionsClient.DeleteQuestion(question.Id);
+      modal!.HideAsync();
+      NavigationManager.Refresh(true);
+    }
+    private async Task OnShowModalClick()
+    {
+        await modal!.ShowAsync();
     }
 
-    public static string GetModalId(QuestionSummary? question)
+    private async Task OnHideModalClick()
     {
-        ArgumentNullException.ThrowIfNull(question);
-        return $"deleteModal-{question.Id}";
-    }
-
-    public static string GetTitleId(QuestionSummary? question)
-    {
-        ArgumentNullException.ThrowIfNull(question);
-        return $"modalTitle-{question.Id}";
+        await modal!.HideAsync();
     }
 }
