--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -9,5 +9,8 @@
 @using TeachingSite.Frontend
 @using TeachingSite.Frontend.Components
 @using TeachingSite.Frontend.Models
+@using TeachingSite.Frontend.Models.ExamModels
+@using TeachingSite.Frontend.Models.QuestionModels
+@using TeachingSite.Frontend.Clients
 @using TeachingSite.Frontend.Clients
 @using BlazorBootstrap;
