--- a/Components/Layout/Navbar.razor
+++ b/Components/Layout/Navbar.razor
@@ -10,7 +10,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/edit">Edit</a>
+          <a class="nav-link active" aria-current="page" href="/question">Question</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/exam">Exam</a>
         </li>
       </ul>
     </div>
